# mlx-optimizers

./: .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  documentation.yml  feature_request.md
.github/workflows/: main.yml  pr_checks.yml
docs/: Doxyfile  Makefile
docs/source/: conf.py  index.md  installation.md
docs/src/: conf.py  install.rst  optimizers.rst
docs/src/_autosummary/: mlx_optimizers.ADOPT.rst  mlx_optimizers.DiffGrad.rst  mlx_optimizers.Kron.rst  mlx_optimizers.Lamb.rst  mlx_optimizers.MARS.rst
docs/src/_templates/: optimizers-template.rst
examples/: README.md  requirements.txt  rosenbrock.py  visualize.py
examples/networks/: compare.py  datasets.py  manager.py  models.py
mlx_optimizers/: __init__.py  adan.py  adopt.py  common.py  diffgrad.py  hello.py  kron.py  lamb.py  lion.py  madgrad.py  mars.py  muon.py  qhadam.py  shampoo.py
scripts/: prepare_changelog.py  release.sh
tests/: common.py  hello_test.py  test_basic.py  test_functional.py  test_neuralnet.py
