[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# See https://setuptools.pypa.io/en/latest/userguide/quickstart.html for more project configuration options.
name = "mlx-optimizers"
dynamic = ["version"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
authors = [
    {name = "Jason Stock", email = "jason12stock@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
  "mlx>=0.18.0"
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://github.com/stockeh/mlx-optimizers"
Repository = "https://github.com/stockeh/mlx-optimizers"
Changelog = "https://github.com/stockeh/mlx-optimizers/blob/main/CHANGELOG.md"
# Documentation = "https://mlx-optimizers.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.13.0,<1.14",
    "black>=24.10.0,<25.0",
    "isort>=5.13.2,<5.14",
    "pytest",
    "pytest-sphinx",
    "pytest-cov",
    "twine>=5.1.1",
    "build",
    "setuptools",
    "wheel",
    "Sphinx>=8.1.3,<8.2.0",
    "furo==2024.8.6",
    "myst-parser>=4.0.0,<4.1",
    "sphinx-copybutton==0.5.2",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc-typehints==2.5.0",
    "packaging",
    "sphinx-book-theme"
]

[tool.setuptools.packages.find]
exclude = [
    "*.tests",
    "*.tests.*",
    "tests.*",
    "tests",
    "docs*",
    "scripts*"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mlx_optimizers = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "mlx_optimizers.version.VERSION"}

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
(
      __pycache__
    | \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.vscode
    | \.venv
    | \bdist\b
    | \bdoc\b
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# You can override these pyright settings by adding a personal pyrightconfig.json file.
[tool.pyright]
reportPrivateImportUsage = false

[tool.ruff]
line-length = 115
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
no_site_packages = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
strict_optional = false

[tool.pytest.ini_options]
testpaths = "tests/"
python_classes = [
  "Test*",
  "*Test"
]
log_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_level = "DEBUG"
